# autotests-api

./: .gitignore  api_client_create_course.py  api_client_create_exercise.py  api_client_get_user.py  config.py  conftest.py  grpc_client.py  grpc_course_client.py  grpc_course_server.py  httpx_create_file.py  httpx_update_user.py  pydantic_create_user.py  pydantic_json_schema_create_user.py  pydantic_json_schema_get_user.py  pyproject.toml  pytest.ini  requirements.txt
clients/: api_client.py  errors_schema.py  event_hooks.py  private_http_builder.py  public_http_builder.py
clients/authentication/: authentication_client.py  authentication_schema.py
clients/courses/: courses_client.py  courses_schema.py
clients/exercises/: exercises_client.py  exercises_schema.py
clients/files/: files_client.py  files_schema.py
clients/users/: private_users_client.py  public_users_client.py  users_schema.py
fixtures/: allure.py  authentication.py  courses.py  exercises.py  files.py  users.py
other/: api_client_create_course.py  api_client_create_exercise.py  course_service.proto  httpx_create_file.py  httpx_get_user_me.py  httpx_update_user.py  pydantic_json_schema_get_user.py  tcp_users_client.py  tcp_users_server.py  websocket_server.py  websocket_users_client.py  websocket_users_server.py
tests/: conftest.py  test_authentication.py  test_pytest.py  test_users.py
tests/authentication/: test_authentication.py
tests/courses/: test_courses.py
tests/exercises/: test_exercises.py
tests/files/: test_files.py
tests/users/: test_users.py
tools/: fakers.py  routes.py
(+11 files in other folders)
