[project]
name = "autotests-api"
version = "1.0"
description = ""
authors = [
    {name = "wynplex"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "allure-pytest (>=2.15.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "faker (>=40.1.2,<41.0.0)",
    "pytest-xdist (>=3.8.0,<4.0.0)",
    "pytest-rerunfailures (>=16.1,<17.0)",
    "jsonschema (>=4.26.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
